<resources>
    <string name="app_name">widget</string>
    <string name="nama">Nama:</string>
    <string name="nim">Nim:</string>
    <string name="alamat">Alamat:</string>
    <string name="gender">Gender:</string>
    <string name="hobi">Hobi:</string>
    <string name="pria">PRIA</string>
    <string name="wanita">WANITA</string>
    <string name="coding">Coding</string>
    <string name="reading">Reading</string>
    <string name="cooking">Cooking</string>
</resources>