<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:text="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNama"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:text="@string/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNim"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNama"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:text="@string/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAlamat"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNim"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGender"
        app:layout_constraintTop_toBottomOf="@+id/txtAlamat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:textColor="#FFFFFF"/>
    <TextView
        android:text="@string/hobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtHobi"
        app:layout_constraintTop_toBottomOf="@+id/txtGender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:textColor="#FFFFFF"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nama"
        android:ems="10"
        android:id="@+id/editNama"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNama"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints=""/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nim"
        android:ems="10"
        android:id="@+id/editNim"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editNama"
        app:layout_constraintStart_toEndOf="@+id/txtNim"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints="" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/alamat"
        android:id="@+id/editAlamat"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editNim"
        app:layout_constraintStart_toEndOf="@+id/txtAlamat"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="16dp"
        android:autofillHints=""/>
    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editAlamat"
        app:layout_constraintStart_toEndOf="@+id/txtGender"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="8dp">
    <RadioButton
        android:text="@string/pria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbPria"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <RadioButton
        android:text="@string/wanita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbWANITA"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold"/>
    </RadioGroup>

    <CheckBox
        android:text="@string/coding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbCoding"
        app:layout_constraintStart_toEndOf="@+id/txtHobi"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/reading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbReading"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbCoding"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/txtHobi"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/cooking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbCooking"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cbReading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtHobi"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:id="@+id/imgButtonCancel"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cbCooking"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        tools:ignore="VectorDrawableCompat"
         />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/imgButtonAdd"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonCancel"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cbCooking"
        android:layout_marginRight="24dp"
        tools:ignore="VectorDrawableCompat"
         />
</androidx.constraintlayout.widget.ConstraintLayout>